// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressFields component should render correctly 1`] = `
<Fragment>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
      ignoreGutter={
        Object {
          "small": true,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  position: relative;
  display: block;
  height: 70px;

  .TextBox__label {
    font-size: ",
                [Function],
                "px;
    padding: 0;
    position: absolute;
    top: ",
                [Function],
                ";
    ",
                [Function],
                "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                [Function],
                "px;
    color: ",
                [Function],
                ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                [Function],
                ";
    padding-bottom: ",
                [Function],
                ";
    margin-bottom: ",
                [Function],
                ";
    padding-top: ",
                [Function],
                ";

    ",
                [Function],
                "

    ",
                [Function],
                ";

    &:focus + .TextBox__label {
      font-size: ",
                [Function],
                "px;
      font-weight: ",
                [Function],
                ";
      top: 0;
    }
  }

  .success__checkmark {
    width: 15px;
    height: 8px;
    margin-left: ",
                [Function],
                ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    bottom: 10px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                [Function],
                ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                [Function],
                ";
      bottom: 0;
    }
  }

  ",
                [Function],
                ";
",
                ";
",
              ],
            },
            "displayName": "Styled(TextBox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-firstname"
        id="firstName"
        name="firstName"
        type="text"
      />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  position: relative;
  display: block;
  height: 70px;

  .TextBox__label {
    font-size: ",
                [Function],
                "px;
    padding: 0;
    position: absolute;
    top: ",
                [Function],
                ";
    ",
                [Function],
                "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                [Function],
                "px;
    color: ",
                [Function],
                ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                [Function],
                ";
    padding-bottom: ",
                [Function],
                ";
    margin-bottom: ",
                [Function],
                ";
    padding-top: ",
                [Function],
                ";

    ",
                [Function],
                "

    ",
                [Function],
                ";

    &:focus + .TextBox__label {
      font-size: ",
                [Function],
                "px;
      font-weight: ",
                [Function],
                ";
      top: 0;
    }
  }

  .success__checkmark {
    width: 15px;
    height: 8px;
    margin-left: ",
                [Function],
                ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    bottom: 10px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                [Function],
                ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                [Function],
                ";
      bottom: 0;
    }
  }

  ",
                [Function],
                ";
",
                ";
",
              ],
            },
            "displayName": "Styled(TextBox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-lastname"
        id="lastName"
        name="lastName"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
      ignoreGutter={
        Object {
          "small": true,
        }
      }
    >
      <Field
        component={[Function]}
        componentRestrictions={
          Object {
            "country": Array [
              "US",
            ],
          }
        }
        dataLocator="addnewaddress-addressl1"
        id="addressLine1"
        name="addressLine1"
        onPlaceSelected={[Function]}
      />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  position: relative;
  display: block;
  height: 70px;

  .TextBox__label {
    font-size: ",
                [Function],
                "px;
    padding: 0;
    position: absolute;
    top: ",
                [Function],
                ";
    ",
                [Function],
                "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                [Function],
                "px;
    color: ",
                [Function],
                ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                [Function],
                ";
    padding-bottom: ",
                [Function],
                ";
    margin-bottom: ",
                [Function],
                ";
    padding-top: ",
                [Function],
                ";

    ",
                [Function],
                "

    ",
                [Function],
                ";

    &:focus + .TextBox__label {
      font-size: ",
                [Function],
                "px;
      font-weight: ",
                [Function],
                ";
      top: 0;
    }
  }

  .success__checkmark {
    width: 15px;
    height: 8px;
    margin-left: ",
                [Function],
                ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    bottom: 10px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                [Function],
                ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                [Function],
                ";
      bottom: 0;
    }
  }

  ",
                [Function],
                ";
",
                ";
",
              ],
            },
            "displayName": "Styled(TextBox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-addressl2"
        id="addressLine2"
        name="addressLine2"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
      ignoreGutter={
        Object {
          "small": true,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  position: relative;
  display: block;
  height: 70px;

  .TextBox__label {
    font-size: ",
                [Function],
                "px;
    padding: 0;
    position: absolute;
    top: ",
                [Function],
                ";
    ",
                [Function],
                "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                [Function],
                "px;
    color: ",
                [Function],
                ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                [Function],
                ";
    padding-bottom: ",
                [Function],
                ";
    margin-bottom: ",
                [Function],
                ";
    padding-top: ",
                [Function],
                ";

    ",
                [Function],
                "

    ",
                [Function],
                ";

    &:focus + .TextBox__label {
      font-size: ",
                [Function],
                "px;
      font-weight: ",
                [Function],
                ";
      top: 0;
    }
  }

  .success__checkmark {
    width: 15px;
    height: 8px;
    margin-left: ",
                [Function],
                ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    bottom: 10px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                [Function],
                ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                [Function],
                ";
      bottom: 0;
    }
  }

  ",
                [Function],
                ";
",
                ";
",
              ],
            },
            "displayName": "Styled(TextBox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-city"
        id="city"
        name="city"
      />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 3,
          "medium": 2,
          "small": 3,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-htpNat",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  position: relative;
  display: block;
  height: 70px;

  .select__input {
    appearance: none;
    background: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png)
      no-repeat right 0px bottom 6px;
    border: 0;
    border-bottom: 1px solid ",
                [Function],
                ";
    ",
                [Function],
                ";
    border-radius: 0;
    color: ",
                [Function],
                ";
    font-size: ",
                [Function],
                "px;
    margin: 0;
    margin-bottom: ",
                [Function],
                ";
    outline: 0;
    padding: ",
                [Function],
                " 0
      ",
                [Function],
                ";
    width: 100%;

    ",
                [Function],
                ";
  }

  .select__label {
    font-size: ",
                [Function],
                "px;
    font-weight: ",
                [Function],
                ";
    padding: 0;
    position: absolute;
    top: 0;
  }

  ",
                [Function],
                ";
",
                ";
",
              ],
            },
            "displayName": "Styled(SelectBox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-htpNat",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-state"
        id="state"
        name="state"
        options={
          Array [
            Object {
              "displayName": "Select",
              "id": "",
            },
            Object {
              "displayName": "AL",
              "fullName": "Alabama",
              "id": "AL",
            },
            Object {
              "displayName": "AK",
              "fullName": "Alaska",
              "id": "AK",
            },
            Object {
              "displayName": "AS",
              "fullName": "American Samoa",
              "id": "AS",
            },
            Object {
              "displayName": "AZ",
              "fullName": "Arizona",
              "id": "AZ",
            },
            Object {
              "displayName": "AR",
              "fullName": "Arkansas",
              "id": "AR",
            },
            Object {
              "displayName": "AA",
              "fullName": "",
              "id": "AA",
            },
            Object {
              "displayName": "AE",
              "fullName": "",
              "id": "AE",
            },
            Object {
              "displayName": "AP",
              "fullName": "",
              "id": "AP",
            },
            Object {
              "displayName": "CA",
              "fullName": "California",
              "id": "CA",
            },
            Object {
              "displayName": "CO",
              "fullName": "Colorado",
              "id": "CO",
            },
            Object {
              "displayName": "CT",
              "fullName": "Connecticut",
              "id": "CT",
            },
            Object {
              "displayName": "DE",
              "fullName": "Delaware",
              "id": "DE",
            },
            Object {
              "displayName": "DC",
              "fullName": "Dist. of Columbia",
              "id": "DC",
            },
            Object {
              "displayName": "FM",
              "fullName": "",
              "id": "FM",
            },
            Object {
              "displayName": "FL",
              "fullName": "Florida",
              "id": "FL",
            },
            Object {
              "displayName": "GA",
              "fullName": "Georgia",
              "id": "GA",
            },
            Object {
              "displayName": "GU",
              "fullName": "Guam",
              "id": "GU",
            },
            Object {
              "displayName": "HI",
              "fullName": "Hawaii",
              "id": "HI",
            },
            Object {
              "displayName": "ID",
              "fullName": "Idaho",
              "id": "ID",
            },
            Object {
              "displayName": "IL",
              "fullName": "Illinois",
              "id": "IL",
            },
            Object {
              "displayName": "IN",
              "fullName": "Indiana",
              "id": "IN",
            },
            Object {
              "displayName": "IA",
              "fullName": "Iowa",
              "id": "IA",
            },
            Object {
              "displayName": "KS",
              "fullName": "Kansas",
              "id": "KS",
            },
            Object {
              "displayName": "KY",
              "fullName": "Kentucky",
              "id": "KY",
            },
            Object {
              "displayName": "LA",
              "fullName": "Louisiana",
              "id": "LA",
            },
            Object {
              "displayName": "ME",
              "fullName": "Maine",
              "id": "ME",
            },
            Object {
              "displayName": "MH",
              "fullName": "Marshall Islands",
              "id": "MH",
            },
            Object {
              "displayName": "MD",
              "fullName": "Maryland",
              "id": "MD",
            },
            Object {
              "displayName": "MA",
              "fullName": "Massachusetts",
              "id": "MA",
            },
            Object {
              "displayName": "MI",
              "fullName": "Michigan",
              "id": "MI",
            },
            Object {
              "displayName": "MN",
              "fullName": "Minnesota",
              "id": "MN",
            },
            Object {
              "displayName": "MS",
              "fullName": "Mississippi",
              "id": "MS",
            },
            Object {
              "displayName": "MO",
              "fullName": "Missouri",
              "id": "MO",
            },
            Object {
              "displayName": "MT",
              "fullName": "Montana",
              "id": "MT",
            },
            Object {
              "displayName": "NE",
              "fullName": "Nebraska",
              "id": "NE",
            },
            Object {
              "displayName": "NV",
              "fullName": "Nevada",
              "id": "NV",
            },
            Object {
              "displayName": "NH",
              "fullName": "New Hampshire",
              "id": "NH",
            },
            Object {
              "displayName": "NJ",
              "fullName": "New Jersey",
              "id": "NJ",
            },
            Object {
              "displayName": "NM",
              "fullName": "New Mexico",
              "id": "NM",
            },
            Object {
              "displayName": "NY",
              "fullName": "New York",
              "id": "NY",
            },
            Object {
              "displayName": "NC",
              "fullName": "North Carolina",
              "id": "NC",
            },
            Object {
              "displayName": "ND",
              "fullName": "North Dakota",
              "id": "ND",
            },
            Object {
              "displayName": "MP",
              "fullName": "Northern Marianas",
              "id": "MP",
            },
            Object {
              "displayName": "OH",
              "fullName": "Ohio",
              "id": "OH",
            },
            Object {
              "displayName": "OK",
              "fullName": "Oklahoma",
              "id": "OK",
            },
            Object {
              "displayName": "OR",
              "fullName": "Oregon",
              "id": "OR",
            },
            Object {
              "displayName": "PW",
              "fullName": "Palau",
              "id": "PW",
            },
            Object {
              "displayName": "PA",
              "fullName": "Pennsylvania",
              "id": "PA",
            },
            Object {
              "displayName": "PR",
              "fullName": "Puerto Rico",
              "id": "PR",
            },
            Object {
              "displayName": "RI",
              "fullName": "Rhode Island",
              "id": "RI",
            },
            Object {
              "displayName": "SC",
              "fullName": "South Carolina",
              "id": "SC",
            },
            Object {
              "displayName": "SD",
              "fullName": "South Dakota",
              "id": "SD",
            },
            Object {
              "displayName": "TN",
              "fullName": "Tennessee",
              "id": "TN",
            },
            Object {
              "displayName": "TX",
              "fullName": "Texas",
              "id": "TX",
            },
            Object {
              "displayName": "UT",
              "fullName": "Utah",
              "id": "UT",
            },
            Object {
              "displayName": "VT",
              "fullName": "Vermont",
              "id": "VT",
            },
            Object {
              "displayName": "VI",
              "fullName": "Virginia",
              "id": "VI",
            },
            Object {
              "displayName": "VA",
              "fullName": "Virgin Islands",
              "id": "VA",
            },
            Object {
              "displayName": "WA",
              "fullName": "Washington",
              "id": "WA",
            },
            Object {
              "displayName": "WV",
              "fullName": "West Virginia",
              "id": "WV",
            },
            Object {
              "displayName": "WI",
              "fullName": "Wisconsin",
              "id": "WI",
            },
            Object {
              "displayName": "WY",
              "fullName": "Wyoming",
              "id": "WY",
            },
          ]
        }
      />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 3,
          "medium": 2,
          "small": 3,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  position: relative;
  display: block;
  height: 70px;

  .TextBox__label {
    font-size: ",
                [Function],
                "px;
    padding: 0;
    position: absolute;
    top: ",
                [Function],
                ";
    ",
                [Function],
                "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                [Function],
                "px;
    color: ",
                [Function],
                ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                [Function],
                ";
    padding-bottom: ",
                [Function],
                ";
    margin-bottom: ",
                [Function],
                ";
    padding-top: ",
                [Function],
                ";

    ",
                [Function],
                "

    ",
                [Function],
                ";

    &:focus + .TextBox__label {
      font-size: ",
                [Function],
                "px;
      font-weight: ",
                [Function],
                ";
      top: 0;
    }
  }

  .success__checkmark {
    width: 15px;
    height: 8px;
    margin-left: ",
                [Function],
                ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    bottom: 10px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                [Function],
                ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                [Function],
                ";
      bottom: 0;
    }
  }

  ",
                [Function],
                ";
",
                ";
",
              ],
            },
            "displayName": "Styled(TextBox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-zipcode"
        id="zipCode"
        maxLength={5}
        name="zipCode"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
      ignoreGutter={
        Object {
          "small": true,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-htpNat",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  position: relative;
  display: block;
  height: 70px;

  .select__input {
    appearance: none;
    background: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png)
      no-repeat right 0px bottom 6px;
    border: 0;
    border-bottom: 1px solid ",
                [Function],
                ";
    ",
                [Function],
                ";
    border-radius: 0;
    color: ",
                [Function],
                ";
    font-size: ",
                [Function],
                "px;
    margin: 0;
    margin-bottom: ",
                [Function],
                ";
    outline: 0;
    padding: ",
                [Function],
                " 0
      ",
                [Function],
                ";
    width: 100%;

    ",
                [Function],
                ";
  }

  .select__label {
    font-size: ",
                [Function],
                "px;
    font-weight: ",
                [Function],
                ";
    padding: 0;
    position: absolute;
    top: 0;
  }

  ",
                [Function],
                ";
",
                ";
",
              ],
            },
            "displayName": "Styled(SelectBox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-htpNat",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-country"
        id="country"
        name="country"
        onChange={[Function]}
        options={
          Array [
            Object {
              "displayName": "United States",
              "id": "US",
            },
            Object {
              "displayName": "Canada",
              "id": "CA",
            },
          ]
        }
      />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  position: relative;
  display: block;
  height: 70px;

  .TextBox__label {
    font-size: ",
                [Function],
                "px;
    padding: 0;
    position: absolute;
    top: ",
                [Function],
                ";
    ",
                [Function],
                "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                [Function],
                "px;
    color: ",
                [Function],
                ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                [Function],
                ";
    padding-bottom: ",
                [Function],
                ";
    margin-bottom: ",
                [Function],
                ";
    padding-top: ",
                [Function],
                ";

    ",
                [Function],
                "

    ",
                [Function],
                ";

    &:focus + .TextBox__label {
      font-size: ",
                [Function],
                "px;
      font-weight: ",
                [Function],
                ";
      top: 0;
    }
  }

  .success__checkmark {
    width: 15px;
    height: 8px;
    margin-left: ",
                [Function],
                ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    bottom: 10px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                [Function],
                ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                [Function],
                ";
      bottom: 0;
    }
  }

  ",
                [Function],
                ";
",
                ";
",
              ],
            },
            "displayName": "Styled(TextBox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-phnumber"
        id="phoneNumber"
        name="phoneNumber"
        type="tel"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    className="elem-mb-XL"
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 4,
        }
      }
      offsetLeft={
        Object {
          "small": 1,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bxivhb",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  display: inline-flex;
  align-items: center;
  height: 50px;

  & .CheckBox__input {
    position: relative;
    top: 0;
    appearance: none;
    outline: 0;
    border: 0;
    height: 25px;
    width: 25px;
    margin: 0;
    margin-right: ",
                [Function],
                ";
  }

  & .CheckBox__input:before {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    left: 0;
    border: 1px solid ",
                [Function],
                ";
  }

  & .CheckBox__input:checked:before {
    background: ",
                [Function],
                ";
    border: 1px solid ",
                [Function],
                ";
  }

  & .CheckBox__input:checked:after {
    transform: rotate(225deg);
    content: '';
    border: 2px solid ",
                [Function],
                ";
    font-size: ",
                [Function],
                "px;
    width: ",
                [Function],
                ";
    height: 10px;
    border-right: 0;
    border-bottom: 0;
    left: 10px;
    top: 5px;
    position: absolute;
  }

  & .disabled {
    opacity: ",
                [Function],
                ";
  }
",
                ";
",
              ],
            },
            "displayName": "Styled(InputCheckbox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bxivhb",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-setdefaddress"
        disabled={false}
        name="primary"
      />
    </Styled(Col)>
  </Styled(Row)>
</Fragment>
`;

exports[`AddressFields component should render correctly without phoneNumber and  1`] = `
<Fragment>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
      ignoreGutter={
        Object {
          "small": true,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  position: relative;
  display: block;
  height: 70px;

  .TextBox__label {
    font-size: ",
                [Function],
                "px;
    padding: 0;
    position: absolute;
    top: ",
                [Function],
                ";
    ",
                [Function],
                "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                [Function],
                "px;
    color: ",
                [Function],
                ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                [Function],
                ";
    padding-bottom: ",
                [Function],
                ";
    margin-bottom: ",
                [Function],
                ";
    padding-top: ",
                [Function],
                ";

    ",
                [Function],
                "

    ",
                [Function],
                ";

    &:focus + .TextBox__label {
      font-size: ",
                [Function],
                "px;
      font-weight: ",
                [Function],
                ";
      top: 0;
    }
  }

  .success__checkmark {
    width: 15px;
    height: 8px;
    margin-left: ",
                [Function],
                ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    bottom: 10px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                [Function],
                ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                [Function],
                ";
      bottom: 0;
    }
  }

  ",
                [Function],
                ";
",
                ";
",
              ],
            },
            "displayName": "Styled(TextBox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-firstname"
        id="firstName"
        name="firstName"
        type="text"
      />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  position: relative;
  display: block;
  height: 70px;

  .TextBox__label {
    font-size: ",
                [Function],
                "px;
    padding: 0;
    position: absolute;
    top: ",
                [Function],
                ";
    ",
                [Function],
                "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                [Function],
                "px;
    color: ",
                [Function],
                ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                [Function],
                ";
    padding-bottom: ",
                [Function],
                ";
    margin-bottom: ",
                [Function],
                ";
    padding-top: ",
                [Function],
                ";

    ",
                [Function],
                "

    ",
                [Function],
                ";

    &:focus + .TextBox__label {
      font-size: ",
                [Function],
                "px;
      font-weight: ",
                [Function],
                ";
      top: 0;
    }
  }

  .success__checkmark {
    width: 15px;
    height: 8px;
    margin-left: ",
                [Function],
                ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    bottom: 10px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                [Function],
                ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                [Function],
                ";
      bottom: 0;
    }
  }

  ",
                [Function],
                ";
",
                ";
",
              ],
            },
            "displayName": "Styled(TextBox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-lastname"
        id="lastName"
        name="lastName"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
      ignoreGutter={
        Object {
          "small": true,
        }
      }
    >
      <Field
        component={[Function]}
        componentRestrictions={
          Object {
            "country": Array [
              "US",
            ],
          }
        }
        dataLocator="addnewaddress-addressl1"
        id="addressLine1"
        name="addressLine1"
        onPlaceSelected={[Function]}
      />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  position: relative;
  display: block;
  height: 70px;

  .TextBox__label {
    font-size: ",
                [Function],
                "px;
    padding: 0;
    position: absolute;
    top: ",
                [Function],
                ";
    ",
                [Function],
                "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                [Function],
                "px;
    color: ",
                [Function],
                ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                [Function],
                ";
    padding-bottom: ",
                [Function],
                ";
    margin-bottom: ",
                [Function],
                ";
    padding-top: ",
                [Function],
                ";

    ",
                [Function],
                "

    ",
                [Function],
                ";

    &:focus + .TextBox__label {
      font-size: ",
                [Function],
                "px;
      font-weight: ",
                [Function],
                ";
      top: 0;
    }
  }

  .success__checkmark {
    width: 15px;
    height: 8px;
    margin-left: ",
                [Function],
                ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    bottom: 10px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                [Function],
                ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                [Function],
                ";
      bottom: 0;
    }
  }

  ",
                [Function],
                ";
",
                ";
",
              ],
            },
            "displayName": "Styled(TextBox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-addressl2"
        id="addressLine2"
        name="addressLine2"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
      ignoreGutter={
        Object {
          "small": true,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  position: relative;
  display: block;
  height: 70px;

  .TextBox__label {
    font-size: ",
                [Function],
                "px;
    padding: 0;
    position: absolute;
    top: ",
                [Function],
                ";
    ",
                [Function],
                "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                [Function],
                "px;
    color: ",
                [Function],
                ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                [Function],
                ";
    padding-bottom: ",
                [Function],
                ";
    margin-bottom: ",
                [Function],
                ";
    padding-top: ",
                [Function],
                ";

    ",
                [Function],
                "

    ",
                [Function],
                ";

    &:focus + .TextBox__label {
      font-size: ",
                [Function],
                "px;
      font-weight: ",
                [Function],
                ";
      top: 0;
    }
  }

  .success__checkmark {
    width: 15px;
    height: 8px;
    margin-left: ",
                [Function],
                ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    bottom: 10px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                [Function],
                ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                [Function],
                ";
      bottom: 0;
    }
  }

  ",
                [Function],
                ";
",
                ";
",
              ],
            },
            "displayName": "Styled(TextBox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-city"
        id="city"
        name="city"
      />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 3,
          "medium": 2,
          "small": 3,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-htpNat",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  position: relative;
  display: block;
  height: 70px;

  .select__input {
    appearance: none;
    background: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png)
      no-repeat right 0px bottom 6px;
    border: 0;
    border-bottom: 1px solid ",
                [Function],
                ";
    ",
                [Function],
                ";
    border-radius: 0;
    color: ",
                [Function],
                ";
    font-size: ",
                [Function],
                "px;
    margin: 0;
    margin-bottom: ",
                [Function],
                ";
    outline: 0;
    padding: ",
                [Function],
                " 0
      ",
                [Function],
                ";
    width: 100%;

    ",
                [Function],
                ";
  }

  .select__label {
    font-size: ",
                [Function],
                "px;
    font-weight: ",
                [Function],
                ";
    padding: 0;
    position: absolute;
    top: 0;
  }

  ",
                [Function],
                ";
",
                ";
",
              ],
            },
            "displayName": "Styled(SelectBox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-htpNat",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-state"
        id="state"
        name="state"
        options={
          Array [
            Object {
              "displayName": "Select",
              "id": "",
            },
            Object {
              "displayName": "AL",
              "fullName": "Alabama",
              "id": "AL",
            },
            Object {
              "displayName": "AK",
              "fullName": "Alaska",
              "id": "AK",
            },
            Object {
              "displayName": "AS",
              "fullName": "American Samoa",
              "id": "AS",
            },
            Object {
              "displayName": "AZ",
              "fullName": "Arizona",
              "id": "AZ",
            },
            Object {
              "displayName": "AR",
              "fullName": "Arkansas",
              "id": "AR",
            },
            Object {
              "displayName": "AA",
              "fullName": "",
              "id": "AA",
            },
            Object {
              "displayName": "AE",
              "fullName": "",
              "id": "AE",
            },
            Object {
              "displayName": "AP",
              "fullName": "",
              "id": "AP",
            },
            Object {
              "displayName": "CA",
              "fullName": "California",
              "id": "CA",
            },
            Object {
              "displayName": "CO",
              "fullName": "Colorado",
              "id": "CO",
            },
            Object {
              "displayName": "CT",
              "fullName": "Connecticut",
              "id": "CT",
            },
            Object {
              "displayName": "DE",
              "fullName": "Delaware",
              "id": "DE",
            },
            Object {
              "displayName": "DC",
              "fullName": "Dist. of Columbia",
              "id": "DC",
            },
            Object {
              "displayName": "FM",
              "fullName": "",
              "id": "FM",
            },
            Object {
              "displayName": "FL",
              "fullName": "Florida",
              "id": "FL",
            },
            Object {
              "displayName": "GA",
              "fullName": "Georgia",
              "id": "GA",
            },
            Object {
              "displayName": "GU",
              "fullName": "Guam",
              "id": "GU",
            },
            Object {
              "displayName": "HI",
              "fullName": "Hawaii",
              "id": "HI",
            },
            Object {
              "displayName": "ID",
              "fullName": "Idaho",
              "id": "ID",
            },
            Object {
              "displayName": "IL",
              "fullName": "Illinois",
              "id": "IL",
            },
            Object {
              "displayName": "IN",
              "fullName": "Indiana",
              "id": "IN",
            },
            Object {
              "displayName": "IA",
              "fullName": "Iowa",
              "id": "IA",
            },
            Object {
              "displayName": "KS",
              "fullName": "Kansas",
              "id": "KS",
            },
            Object {
              "displayName": "KY",
              "fullName": "Kentucky",
              "id": "KY",
            },
            Object {
              "displayName": "LA",
              "fullName": "Louisiana",
              "id": "LA",
            },
            Object {
              "displayName": "ME",
              "fullName": "Maine",
              "id": "ME",
            },
            Object {
              "displayName": "MH",
              "fullName": "Marshall Islands",
              "id": "MH",
            },
            Object {
              "displayName": "MD",
              "fullName": "Maryland",
              "id": "MD",
            },
            Object {
              "displayName": "MA",
              "fullName": "Massachusetts",
              "id": "MA",
            },
            Object {
              "displayName": "MI",
              "fullName": "Michigan",
              "id": "MI",
            },
            Object {
              "displayName": "MN",
              "fullName": "Minnesota",
              "id": "MN",
            },
            Object {
              "displayName": "MS",
              "fullName": "Mississippi",
              "id": "MS",
            },
            Object {
              "displayName": "MO",
              "fullName": "Missouri",
              "id": "MO",
            },
            Object {
              "displayName": "MT",
              "fullName": "Montana",
              "id": "MT",
            },
            Object {
              "displayName": "NE",
              "fullName": "Nebraska",
              "id": "NE",
            },
            Object {
              "displayName": "NV",
              "fullName": "Nevada",
              "id": "NV",
            },
            Object {
              "displayName": "NH",
              "fullName": "New Hampshire",
              "id": "NH",
            },
            Object {
              "displayName": "NJ",
              "fullName": "New Jersey",
              "id": "NJ",
            },
            Object {
              "displayName": "NM",
              "fullName": "New Mexico",
              "id": "NM",
            },
            Object {
              "displayName": "NY",
              "fullName": "New York",
              "id": "NY",
            },
            Object {
              "displayName": "NC",
              "fullName": "North Carolina",
              "id": "NC",
            },
            Object {
              "displayName": "ND",
              "fullName": "North Dakota",
              "id": "ND",
            },
            Object {
              "displayName": "MP",
              "fullName": "Northern Marianas",
              "id": "MP",
            },
            Object {
              "displayName": "OH",
              "fullName": "Ohio",
              "id": "OH",
            },
            Object {
              "displayName": "OK",
              "fullName": "Oklahoma",
              "id": "OK",
            },
            Object {
              "displayName": "OR",
              "fullName": "Oregon",
              "id": "OR",
            },
            Object {
              "displayName": "PW",
              "fullName": "Palau",
              "id": "PW",
            },
            Object {
              "displayName": "PA",
              "fullName": "Pennsylvania",
              "id": "PA",
            },
            Object {
              "displayName": "PR",
              "fullName": "Puerto Rico",
              "id": "PR",
            },
            Object {
              "displayName": "RI",
              "fullName": "Rhode Island",
              "id": "RI",
            },
            Object {
              "displayName": "SC",
              "fullName": "South Carolina",
              "id": "SC",
            },
            Object {
              "displayName": "SD",
              "fullName": "South Dakota",
              "id": "SD",
            },
            Object {
              "displayName": "TN",
              "fullName": "Tennessee",
              "id": "TN",
            },
            Object {
              "displayName": "TX",
              "fullName": "Texas",
              "id": "TX",
            },
            Object {
              "displayName": "UT",
              "fullName": "Utah",
              "id": "UT",
            },
            Object {
              "displayName": "VT",
              "fullName": "Vermont",
              "id": "VT",
            },
            Object {
              "displayName": "VI",
              "fullName": "Virginia",
              "id": "VI",
            },
            Object {
              "displayName": "VA",
              "fullName": "Virgin Islands",
              "id": "VA",
            },
            Object {
              "displayName": "WA",
              "fullName": "Washington",
              "id": "WA",
            },
            Object {
              "displayName": "WV",
              "fullName": "West Virginia",
              "id": "WV",
            },
            Object {
              "displayName": "WI",
              "fullName": "Wisconsin",
              "id": "WI",
            },
            Object {
              "displayName": "WY",
              "fullName": "Wyoming",
              "id": "WY",
            },
          ]
        }
      />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 3,
          "medium": 2,
          "small": 3,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bwzfXH",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  position: relative;
  display: block;
  height: 70px;

  .TextBox__label {
    font-size: ",
                [Function],
                "px;
    padding: 0;
    position: absolute;
    top: ",
                [Function],
                ";
    ",
                [Function],
                "
  }

  .TextBox__input {
    margin: 0;
    outline: 0;
    font-size: ",
                [Function],
                "px;
    color: ",
                [Function],
                ";
    width: 100%;
    background-position: left top;
    background-repeat: no-repeat;
    background-size: contain;
    border: 0 solid transparent;
    border-bottom: 1px solid ",
                [Function],
                ";
    padding-bottom: ",
                [Function],
                ";
    margin-bottom: ",
                [Function],
                ";
    padding-top: ",
                [Function],
                ";

    ",
                [Function],
                "

    ",
                [Function],
                ";

    &:focus + .TextBox__label {
      font-size: ",
                [Function],
                "px;
      font-weight: ",
                [Function],
                ";
      top: 0;
    }
  }

  .success__checkmark {
    width: 15px;
    height: 8px;
    margin-left: ",
                [Function],
                ";
    transform: rotate(-45deg);
    transform-origin: left;
    position: absolute;
    right: 0;
    bottom: 10px;

    &:before {
      content: '';
      position: absolute;
      width: 3px;
      height: 100%;
      background-color: ",
                [Function],
                ";
    }

    &:after {
      content: '';
      position: absolute;
      width: 100%;
      height: 3px;
      background-color: ",
                [Function],
                ";
      bottom: 0;
    }
  }

  ",
                [Function],
                ";
",
                ";
",
              ],
            },
            "displayName": "Styled(TextBox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bwzfXH",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-zipcode"
        id="zipCode"
        maxLength={5}
        name="zipCode"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
      ignoreGutter={
        Object {
          "small": true,
        }
      }
    >
      <Field
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-htpNat",
              "isStatic": false,
              "rules": Array [
                "
  ",
                "
  position: relative;
  display: block;
  height: 70px;

  .select__input {
    appearance: none;
    background: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png)
      no-repeat right 0px bottom 6px;
    border: 0;
    border-bottom: 1px solid ",
                [Function],
                ";
    ",
                [Function],
                ";
    border-radius: 0;
    color: ",
                [Function],
                ";
    font-size: ",
                [Function],
                "px;
    margin: 0;
    margin-bottom: ",
                [Function],
                ";
    outline: 0;
    padding: ",
                [Function],
                " 0
      ",
                [Function],
                ";
    width: 100%;

    ",
                [Function],
                ";
  }

  .select__label {
    font-size: ",
                [Function],
                "px;
    font-weight: ",
                [Function],
                ";
    padding: 0;
    position: absolute;
    top: 0;
  }

  ",
                [Function],
                ";
",
                ";
",
              ],
            },
            "displayName": "Styled(SelectBox)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-htpNat",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        dataLocator="addnewaddress-country"
        id="country"
        name="country"
        onChange={[Function]}
        options={
          Array [
            Object {
              "displayName": "United States",
              "id": "US",
            },
            Object {
              "displayName": "Canada",
              "id": "CA",
            },
          ]
        }
      />
    </Styled(Col)>
  </Styled(Row)>
</Fragment>
`;
